# gischat

./: .gitignore  Procfile  README.md  build.gradle  settings.gradle
.github/workflows/: build.yml  build_and_deploy.yml  deploy-app.yml  deploy-pychatter.yml
docs/: README.md  _config.yml
domain/: build.gradle
domain/src/main/java/org/heigit/gischat/domain/: Chat.java  ChatMessage.java  User.java
domain/src/test/java/org/heigit/gischat/domain/: ChatMessageTests.java  ChatTests.java  UserTests.java
frontend/: .eslintrc.js  build.gradle  karma.conf.js  npm-on-windows.md  package-lock.json  package.json
frontend/src/: gischat.css  index.html
frontend/src/js/: config.js  gischat-api.js  gischat-config.js  gischat-features.js  gischat-username.js  gischat.js
frontend/test/: chat-tests.js  config-tests.js  features-tests.js  messages-tests.js  username-tests.js
pychatter/: Procfile  README.md  pyproject.toml
pychatter/pychatter/: api.py  main.py
pychatter/pychatter/config/: config.py  sample.config.toml
pychatter/scripts/: start_api.sh
pychatter/tests/: test_api.py  test_config.py  test_main.py
web/: build.gradle
web/src/main/java/org/heigit/gischat/web/: GischatApplication.java  GischatConfiguration.java  WebApplicationConfiguration.java
web/src/main/java/org/heigit/gischat/web/chats/: ChatController.java  ChatResponse.java  (+2 more)
web/src/main/resources/: application.properties
web/src/main/resources/public/: test.html
web/src/test/java/org/heigit/gischat/web/: GischatApplicationTests.java
web/src/test/resources/: application-test.properties
(+12 files in other folders)
