[project]
name = "pychatter"
requires-python = ">=3.10.0"
version = "0.1.0"
dependencies = [
    "apscheduler == 3.9.1",
    "fastapi == 0.87.0",
    "httpx == 0.23.1",
    "openai == 0.25.0",
    "pytest == 7.2.0",
    "pytest-asyncio == 0.20.0",
    "requests == 2.28.1",
    "uvicorn == 0.20.0",
    "gunicorn == 20.1.0",
    "tomli == 2.0.1",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
